# gpg

./: CMakeLists.txt  package.xml
msg/: GraspArrayMsg.msg  GraspMsg.msg
src/: ros_integration.cpp
src/gpg/: candidates_generator.cpp  grasp.cpp  image_aligner.py
src/gpg/images/: img0.npy  img1.npy  img10.npy  img100.npy  img101.npy  img102.npy  img103.npy  img104.npy  img105.npy  img107.npy  img108.npy  img109.npy  img11.npy  img110.npy  img111.npy  img12.npy  img13.npy  img14.npy  img15.npy  img16.npy  img17.npy  img18.npy  img19.npy  img2.npy  img20.npy  img21.npy  img22.npy  img23.npy  img24.npy  img25.npy  img26.npy  img27.npy  img28.npy  img29.npy  img3.npy  img30.npy  img31.npy  img32.npy  img33.npy  img34.npy  (+69 more)
